--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
             <a class="logo" href="./index.html">
                 <img class="logo-img" src="./images/Logo.svg" alt="logo" width="115" height="24">
             </a>
-            <ul class="menu-list">
+            <ul class="menu list">
                 <li class="menu-item">
-                   <a href="#studio">Studio</a>
+                   <a class="menu-link link" href="#studio">Studio</a>
                 </li>
                 <li class="menu-item">
-                   <a href="./portfolio.html">Portfolio</a>
+                   <a class="menu-link link"  href="./portfolio.html">Portfolio</a>
                 </li>
                 <li class="menu-item">
-                   <a href="#contacts">Contacts</a>
+                   <a class="menu-link link"  href="#contacts">Contacts</a>
                 </li>
             </ul>
         </nav>
         <address class="menu-contacts">
-            <ul  class="contacts">
+            <ul class="contacts list">
                 <li class="contacts-item">
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li class="contacts-item">
-                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a class="contacts-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
@@ -49,7 +49,7 @@
         <!-- STUDIO -->
         <section class="studio" id="studio">
             <h2 hidden>studio</h2>
-            <ul class="studio-wrp">
+            <ul class="studio-wrp list">
                 <li class="studio-item">
                     <h3 class="studio-item-title">Strategy</h3>
                     <p class="studio-descr">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
@@ -71,7 +71,7 @@
         <!-- WORK -->
         <section class="work">
             <h2 class="work-title">What are we doing</h2>
-            <ul class="work-wrp">
+            <ul class="work-wrp list">
                 <li class="work-item">
                     <img class="work-img" src="./images/computer.jpg" alt="computer" width="360" height="300">
                 </li>
@@ -86,7 +86,7 @@
 
         <section class="contacts" id="contacts">
             <h2 class="contacts-title">Our Team</h2>
-            <ul class="contacts-wrp">
+            <ul class="contacts-wrp list">
                 <li class="contacts-item">
                     <img class="contacts-img" src="./images/mark.jpg" alt="mark guerrero" width="264" height="260">
                     <h3 class="contacts-employee">Mark Guerrero</h3>
