--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -14,31 +19,31 @@
                 <a class="logo" href="./index.html">
                     <img class="logo-img" src="./images/Logo.svg" alt="logo" width="115" height="24">
                 </a>
-                <ul class="menu-list">
+                <ul class="menu list">
                     <li class="menu-item">
-                        <a href="./index.html">Studio</a>
+                        <a class="menu-link link" href="./index.html">Studio</a>
                     </li>
                     <li class="menu-item">
-                        <a href="#portfolio">Portfolio</a>
+                        <a class="menu-link link" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="menu-item">
-                        <a href="#contacts">Contacts</a>
+                        <a class="menu-link link" href="#contacts">Contacts</a>
                     </li>
                 </ul>
             </nav>
             <address class="menu-contacts">
-                <ul class="contacts">
+                <ul class="contacts list">
                     <li class="contacts-item">
-                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li class="contacts-item">
-                        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                        <a class="contacts-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
             </address>
 
             <section class="portfolio" id="portfolio">
-                <ul class="portfolio-filters">
+                <ul class="portfolio-filters list">
                     <li class="portfolio">
                         <button class="portfolio-btn" type="button">All</button>
                     </li>
