--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>WebStudio</title>
 </head>
-<body>  
+<body> 
     <header class="page-header">
         <nav class="page-navigation">
             <a class="logo" href="./index.html">
@@ -43,8 +43,10 @@
     <main>
         <!-- HERO -->
         <section class="hero">
-            <h1 class="hero-title">Effective Solutions for Your Business</h1>
-            <button class="modal-button" type="button">Order Service</button>
+            <h1 class="hero-title">
+                Effective Solutions 
+              <div>for Your Business</div> </h1>
+            <button class="hero-modal-button" type="button">Order Service</button>
         </section>
         <!-- STUDIO -->
         <section class="studio" id="studio">
@@ -112,7 +114,7 @@
     </main>
     <footer class="footer">
         <a class="footer-logo" href="./index.html">
-            <img class="footer-logo-img" src="./images/Logo.svg" alt="logo" width="115" height="24">
+            <img class="footer-logo-img" src="./images/logolight.svg" alt="logo" width="115" height="24">
         </a>
         <p class="footer-descr">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
