--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
                     </li>
                 </ul>
             </address>
-
+            </header>
             <section class="portfolio" id="portfolio">
                 <ul class="portfolio-filters list">
                     <li class="portfolio">
@@ -60,12 +60,58 @@
                         <button class="portfolio-btn" type="button">Marketing</button>
                     </li>
                 </ul>
+                <ul class="portfolio-projects list">
+                    <li class="portfolio-item">
+                        <img class="portfolio-img" src="./images/bank.jpg" alt="bank app">
+                        <h3 class="portfolio-work">Banking App Interface Concept</h3>
+                        <p class="portfolio-descr">App</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-img" src="./images/pay.jpg" alt="payment">
+                        <h3 class="portfolio-work">Cashless Payment</h3>
+                        <p class="portfolio-descr">Marketing</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-img" src="./images/meditation.jpg" alt="laptop">
+                        <h3 class="portfolio-work">Meditation App</h3>
+                        <p class="portfolio-descr">App</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-img" src="./images/taxi.jpg" alt="taxi driver">
+                        <h3 class="portfolio-work">Taxi Service</h3>
+                        <p class="portfolio-descr">Marketing</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-img" src="./images/illustration.jpg" alt="Illustrations">
+                        <h3 class="portfolio-work">Screen Illustrations</h3>
+                        <p class="portfolio-descr">Design</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-img" src="./images/courses.jpg" alt="woman">
+                        <h3 class="portfolio-work">Online Courses</h3>
+                        <p class="portfolio-descr">Marketing</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-img" src="./images/concept.jpg" alt="concept">
+                        <h3 class="portfolio-work">Instagram Stories Concept</h3>
+                        <p class="portfolio-descr">Design</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-img" src="./images/food.jpg" alt="food">
+                        <h3 class="portfolio-work">Organic Food</h3>
+                        <p class="portfolio-descr">Web Site</p>
+                    </li>
+                    <li class="portfolio-item">
+                        <img class="portfolio-img" src="./images/coffee.jpg" alt="coffee">
+                        <h3 class="portfolio-work">Fresh Coffee</h3>
+                        <p class="portfolio-descr">Web Site</p>
+                    </li>
+                </ul>
             </section>
-
-        </header>
+               
         <footer class="footer">
             <a class="footer-logo" href="./index.html">
-                <img class="footer-logo-img" src="./images/Logo.svg" alt="logo" width="115" height="24">
+                <img class="footer-logo-img" src="./images/logolight.svg" alt="logo" width="115" height="24">
             </a>
             <p class="footer-descr">Increase the flow of customers and sales for your business with digital marketing & growth
                 solutions.</p>
