--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section class="hero">
             <h1 class="hero-title">
                 Effective Solutions 
-              <div>for Your Business</div> </h1>
+              for Your Business </h1>
             <button class="hero-modal-button" type="button">Order Service</button>
         </section>
         <!-- STUDIO -->
