--- a/portfolio.html
+++ b/portfolio.html
@@ -42,6 +42,7 @@
                 </ul>
             </address>
             </header>
+            <main>
             <section class="portfolio" id="portfolio">
                 <ul class="portfolio-filters list">
                     <li class="portfolio">
@@ -108,7 +109,7 @@
                     </li>
                 </ul>
             </section>
-               
+            </main>
         <footer class="footer">
             <a class="footer-logo" href="./index.html">
                 <img class="footer-logo-img" src="./images/logolight.svg" alt="logo" width="115" height="24">
