--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 <body> 
     <header class="page-header">
         <nav class="page-navigation">
-            <a class="logo" href="./index.html">
-                <img class="logo-img" src="./images/Logo.svg" alt="logo" width="115" height="24">
+            <a class="logo link" href="./index.html">
+                <p class="logo-web">Web<span class="logo-studio">Studio</span></p>
             </a>
             <ul class="menu list">
                 <li class="menu-item">
-                   <a class="menu-link link" href="#studio">Studio</a>
+                   <a class="menu-link link" href="./index.html">Studio</a>
                 </li>
                 <li class="menu-item">
                    <a class="menu-link link"  href="./portfolio.html">Portfolio</a>
                 </li>
                 <li class="menu-item">
-                   <a class="menu-link link"  href="#contacts">Contacts</a>
+                   <a class="menu-link link"  href="">Contacts</a>
                 </li>
             </ul>
         </nav>
@@ -113,8 +113,8 @@
         </section>
     </main>
     <footer class="footer">
-        <a class="footer-logo" href="./index.html">
-            <img class="footer-logo-img" src="./images/logolight.svg" alt="logo" width="115" height="24">
+        <a class="footer-logo link href="./index.html">
+            <p class="logo-web">Web<span class="footer-studio">Studio</span></p>
         </a>
         <p class="footer-descr">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
