--- a/portfolio.html
+++ b/portfolio.html
@@ -17,17 +17,17 @@
         <header class="page-header">
             <nav class="page-navigation">
                 <a class="logo" href="./index.html">
-                    <img class="logo-img" src="./images/Logo.svg" alt="logo" width="115" height="24">
+                    <p class="logo-web">Web<span class="logo-studio">Studio</span></p>
                 </a>
                 <ul class="menu list">
                     <li class="menu-item">
                         <a class="menu-link link" href="./index.html">Studio</a>
                     </li>
                     <li class="menu-item">
-                        <a class="menu-link link" href="#portfolio">Portfolio</a>
+                        <a class="menu-link link" href="./portfolio.html">Portfolio</a>
                     </li>
                     <li class="menu-item">
-                        <a class="menu-link link" href="#contacts">Contacts</a>
+                        <a class="menu-link link" href="">Contacts</a>
                     </li>
                 </ul>
             </nav>
@@ -44,6 +44,7 @@
             </header>
             <main>
             <section class="portfolio" id="portfolio">
+                <h1 hidden>portfolio</h1>
                 <ul class="portfolio-filters list">
                     <li class="portfolio">
                         <button class="portfolio-btn" type="button">All</button>
@@ -112,7 +113,7 @@
             </main>
         <footer class="footer">
             <a class="footer-logo" href="./index.html">
-                <img class="footer-logo-img" src="./images/logolight.svg" alt="logo" width="115" height="24">
+                <p class="logo-web">Web<span class="footer-studio">Studio</span></p>
             </a>
             <p class="footer-descr">Increase the flow of customers and sales for your business with digital marketing & growth
                 solutions.</p>
