--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a class="footer-logo link href="./index.html">
+        <a class="footer-logo link" href="./index.html">
             <p class="logo-web">Web<span class="footer-studio">Studio</span></p>
         </a>
         <p class="footer-descr">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
