--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <body>
         <header class="page-header">
             <nav class="page-navigation">
-                <a class="logo" href="./index.html">
+                <a class="logo link" href="./index.html">
                     <p class="logo-web">Web<span class="logo-studio">Studio</span></p>
                 </a>
                 <ul class="menu list">
@@ -64,55 +64,73 @@
                 </ul>
                 <ul class="portfolio-projects list">
                     <li class="portfolio-item">
-                        <img class="portfolio-img" src="./images/bank.jpg" alt="bank app">
-                        <h3 class="portfolio-work">Banking App Interface Concept</h3>
+                        <a href="#" class="link">
+                            <img class="portfolio-img" src="./images/bank.jpg" alt="bank app">
+                        </a>
+                        <h2 class="portfolio-work">Banking App Interface Concept</h2>
                         <p class="portfolio-descr">App</p>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-img" src="./images/pay.jpg" alt="payment">
-                        <h3 class="portfolio-work">Cashless Payment</h3>
+                        <a href="#" class="link">
+                            <img class="portfolio-img" src="./images/pay.jpg" alt="payment">
+                        </a>
+                        <h2 class="portfolio-work">Cashless Payment</h2>
                         <p class="portfolio-descr">Marketing</p>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-img" src="./images/meditation.jpg" alt="laptop">
-                        <h3 class="portfolio-work">Meditation App</h3>
+                        <a href="#" class="link">
+                            <img class="portfolio-img" src="./images/meditation.jpg" alt="laptop">
+                        </a>
+                        <h2 class="portfolio-work">Meditation App</h2>
                         <p class="portfolio-descr">App</p>
                     </li>
                     <li class="portfolio-item">
+                        <a href="#" class="link">
                         <img class="portfolio-img" src="./images/taxi.jpg" alt="taxi driver">
-                        <h3 class="portfolio-work">Taxi Service</h3>
+                        </a>
+                        <h2 class="portfolio-work">Taxi Service</h2>
                         <p class="portfolio-descr">Marketing</p>
                     </li>
                     <li class="portfolio-item">
+                        <a href="#" class="link">
                         <img class="portfolio-img" src="./images/illustration.jpg" alt="Illustrations">
-                        <h3 class="portfolio-work">Screen Illustrations</h3>
+                        </a>
+                        <h2 class="portfolio-work">Screen Illustrations</h2>
                         <p class="portfolio-descr">Design</p>
                     </li>
                     <li class="portfolio-item">
+                        <a href="#" class="link">
                         <img class="portfolio-img" src="./images/courses.jpg" alt="woman">
-                        <h3 class="portfolio-work">Online Courses</h3>
+                        </a>
+                        <h2 class="portfolio-work">Online Courses</h2>
                         <p class="portfolio-descr">Marketing</p>
                     </li>
                     <li class="portfolio-item">
+                        <a href="#" class="link">
                         <img class="portfolio-img" src="./images/concept.jpg" alt="concept">
-                        <h3 class="portfolio-work">Instagram Stories Concept</h3>
+                        </a>
+                        <h2 class="portfolio-work">Instagram Stories Concept</h2>
                         <p class="portfolio-descr">Design</p>
                     </li>
                     <li class="portfolio-item">
+                        <a href="#" class="link">
                         <img class="portfolio-img" src="./images/food.jpg" alt="food">
-                        <h3 class="portfolio-work">Organic Food</h3>
+                        </a>
+                        <h2 class="portfolio-work">Organic Food</h2>
                         <p class="portfolio-descr">Web Site</p>
                     </li>
                     <li class="portfolio-item">
+                        <a href="#" class="link">
                         <img class="portfolio-img" src="./images/coffee.jpg" alt="coffee">
-                        <h3 class="portfolio-work">Fresh Coffee</h3>
+                        </a>
+                        <h2 class="portfolio-work">Fresh Coffee</h2>
                         <p class="portfolio-descr">Web Site</p>
                     </li>
                 </ul>
             </section>
             </main>
         <footer class="footer">
-            <a class="footer-logo" href="./index.html">
+            <a class="footer-logo link" href="./index.html">
                 <p class="logo-web">Web<span class="footer-studio">Studio</span></p>
             </a>
             <p class="footer-descr">Increase the flow of customers and sales for your business with digital marketing & growth
