--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </section>
         <!-- STUDIO -->
         <section class="studio" id="studio">
-            <h2 hidden>studio</h2>
+            <h2 hidden class="std">studio</h2>
             <ul class="studio-wrp list">
                 <li class="studio-item">
                     <h3 class="studio-item-title">Strategy</h3>
