--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="page-header">
         <nav class="page-navigation">
             <a class="logo link" href="./index.html">
-                <p class="logo-web">Web<span class="logo-studio">Studio</span></p>
+                Web<span class="logo-studio">Studio</span>
             </a>
             <ul class="menu list">
                 <li class="menu-item">
@@ -50,7 +50,7 @@
         </section>
         <!-- STUDIO -->
         <section class="studio" id="studio">
-            <h2 hidden class="std">studio</h2>
+            <h2 hidden class="studio-title">advantages</h2>
             <ul class="studio-wrp list">
                 <li class="studio-item">
                     <h3 class="studio-item-title">Strategy</h3>
@@ -113,8 +113,8 @@
         </section>
     </main>
     <footer class="footer">
-        <a class="footer-logo link" href="./index.html">
-            <p class="logo-web">Web<span class="footer-studio">Studio</span></p>
+        <a class="logo link" href="./index.html">
+            Web<span class="footer-studio">Studio</span>
         </a>
         <p class="footer-descr">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
