--- a/portfolio.html
+++ b/portfolio.html
@@ -12,12 +12,10 @@
     <title>Document</title>
 </head>
 <body>
-    </head>
-    <body>
         <header class="page-header">
             <nav class="page-navigation">
                 <a class="logo link" href="./index.html">
-                    <p class="logo-web">Web<span class="logo-studio">Studio</span></p>
+                    Web<span class="logo-studio">Studio</span>
                 </a>
                 <ul class="menu list">
                     <li class="menu-item">
@@ -65,73 +63,73 @@
                 <ul class="portfolio-projects list">
                     <li class="portfolio-item">
                         <a href="#" class="link">
-                            <img class="portfolio-img" src="./images/bank.jpg" alt="bank app">
-                        </a>
+                            <img class="portfolio-img" src="./images/bank.jpg" alt="bank app">                 
                         <h2 class="portfolio-work">Banking App Interface Concept</h2>
                         <p class="portfolio-descr">App</p>
+                        </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="#" class="link">
-                            <img class="portfolio-img" src="./images/pay.jpg" alt="payment">
-                        </a>
+                            <img class="portfolio-img" src="./images/pay.jpg" alt="payment">                        
                         <h2 class="portfolio-work">Cashless Payment</h2>
                         <p class="portfolio-descr">Marketing</p>
+                        </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="#" class="link">
-                            <img class="portfolio-img" src="./images/meditation.jpg" alt="laptop">
-                        </a>
+                            <img class="portfolio-img" src="./images/meditation.jpg" alt="laptop">                   
                         <h2 class="portfolio-work">Meditation App</h2>
                         <p class="portfolio-descr">App</p>
+                        </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="#" class="link">
-                        <img class="portfolio-img" src="./images/taxi.jpg" alt="taxi driver">
-                        </a>
+                        <img class="portfolio-img" src="./images/taxi.jpg" alt="taxi driver">                       
                         <h2 class="portfolio-work">Taxi Service</h2>
                         <p class="portfolio-descr">Marketing</p>
+                        </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="#" class="link">
-                        <img class="portfolio-img" src="./images/illustration.jpg" alt="Illustrations">
-                        </a>
+                        <img class="portfolio-img" src="./images/illustration.jpg" alt="Illustrations">                       
                         <h2 class="portfolio-work">Screen Illustrations</h2>
                         <p class="portfolio-descr">Design</p>
+                        </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="#" class="link">
-                        <img class="portfolio-img" src="./images/courses.jpg" alt="woman">
-                        </a>
+                        <img class="portfolio-img" src="./images/courses.jpg" alt="woman">                       
                         <h2 class="portfolio-work">Online Courses</h2>
                         <p class="portfolio-descr">Marketing</p>
+                        </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="#" class="link">
-                        <img class="portfolio-img" src="./images/concept.jpg" alt="concept">
-                        </a>
+                        <img class="portfolio-img" src="./images/concept.jpg" alt="concept">                        
                         <h2 class="portfolio-work">Instagram Stories Concept</h2>
                         <p class="portfolio-descr">Design</p>
+                        </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="#" class="link">
-                        <img class="portfolio-img" src="./images/food.jpg" alt="food">
-                        </a>
+                        <img class="portfolio-img" src="./images/food.jpg" alt="food">                        
                         <h2 class="portfolio-work">Organic Food</h2>
                         <p class="portfolio-descr">Web Site</p>
+                        </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="#" class="link">
-                        <img class="portfolio-img" src="./images/coffee.jpg" alt="coffee">
-                        </a>
+                        <img class="portfolio-img" src="./images/coffee.jpg" alt="coffee">                        
                         <h2 class="portfolio-work">Fresh Coffee</h2>
                         <p class="portfolio-descr">Web Site</p>
+                        </a>
                     </li>
                 </ul>
             </section>
             </main>
         <footer class="footer">
-            <a class="footer-logo link" href="./index.html">
-                <p class="logo-web">Web<span class="footer-studio">Studio</span></p>
+            <a class="logo link" href="./index.html">
+                Web<span class="footer-studio">Studio</span>
             </a>
             <p class="footer-descr">Increase the flow of customers and sales for your business with digital marketing & growth
                 solutions.</p>
