--- a/portfolio.html
+++ b/portfolio.html
@@ -63,63 +63,63 @@
                 <ul class="portfolio-projects list">
                     <li class="portfolio-item">
                         <a href="#" class="link">
-                            <img class="portfolio-img" src="./images/bank.jpg" alt="bank app">                 
+                            <img class="portfolio-img" src="./images/bank.jpg" alt="bank app" width="360">                 
                         <h2 class="portfolio-work">Banking App Interface Concept</h2>
                         <p class="portfolio-descr">App</p>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="#" class="link">
-                            <img class="portfolio-img" src="./images/pay.jpg" alt="payment">                        
+                            <img class="portfolio-img" src="./images/pay.jpg" alt="payment" width="360">                        
                         <h2 class="portfolio-work">Cashless Payment</h2>
                         <p class="portfolio-descr">Marketing</p>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="#" class="link">
-                            <img class="portfolio-img" src="./images/meditation.jpg" alt="laptop">                   
+                            <img class="portfolio-img" src="./images/meditation.jpg" alt="laptop" width="360">                   
                         <h2 class="portfolio-work">Meditation App</h2>
                         <p class="portfolio-descr">App</p>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="#" class="link">
-                        <img class="portfolio-img" src="./images/taxi.jpg" alt="taxi driver">                       
+                        <img class="portfolio-img" src="./images/taxi.jpg" alt="taxi driver" width="360">                       
                         <h2 class="portfolio-work">Taxi Service</h2>
                         <p class="portfolio-descr">Marketing</p>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="#" class="link">
-                        <img class="portfolio-img" src="./images/illustration.jpg" alt="Illustrations">                       
+                        <img class="portfolio-img" src="./images/illustration.jpg" alt="Illustrations" width="360">                       
                         <h2 class="portfolio-work">Screen Illustrations</h2>
                         <p class="portfolio-descr">Design</p>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="#" class="link">
-                        <img class="portfolio-img" src="./images/courses.jpg" alt="woman">                       
+                        <img class="portfolio-img" src="./images/courses.jpg" alt="woman" width="360">                       
                         <h2 class="portfolio-work">Online Courses</h2>
                         <p class="portfolio-descr">Marketing</p>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="#" class="link">
-                        <img class="portfolio-img" src="./images/concept.jpg" alt="concept">                        
+                        <img class="portfolio-img" src="./images/concept.jpg" alt="concept" width="360">                        
                         <h2 class="portfolio-work">Instagram Stories Concept</h2>
                         <p class="portfolio-descr">Design</p>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="#" class="link">
-                        <img class="portfolio-img" src="./images/food.jpg" alt="food">                        
+                        <img class="portfolio-img" src="./images/food.jpg" alt="food" width="360">                        
                         <h2 class="portfolio-work">Organic Food</h2>
                         <p class="portfolio-descr">Web Site</p>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="#" class="link">
-                        <img class="portfolio-img" src="./images/coffee.jpg" alt="coffee">                        
+                        <img class="portfolio-img" src="./images/coffee.jpg" alt="coffee" width="360">                        
                         <h2 class="portfolio-work">Fresh Coffee</h2>
                         <p class="portfolio-descr">Web Site</p>
                         </a>
